--- a/src/App.css
+++ b/src/App.css
@@ -135,7 +135,7 @@
 }
 
 .dataContainer{
-  flex: 1 1;
+  flex:1 1;
   padding: 10px 0px 0px 20px;
 
 }
@@ -153,13 +153,42 @@
   display: flex;
   align-items: center;
 }
-
+.arrow{
+  margin-left:-740px;
+}
 .dataList{
 display: flex;
+flex-direction: row;
 align-items: center;
-justify-content: space-between;
 border-bottom: 1px solid #ccc;
-padding:2px;
+justify-content: space-between;
+font-size: 16px;
+margin-top: -8px;
+width:100%;
+}
+.space2{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  gap:30px;
+  line-height: 1;
+
+}
+.space1{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  
+ 
+}
+.avatar{
+  display: flex;
+  flex-direction: column;
+  margin-left:100px;
+  align-items: center;
+  font-size: 10px;
 }
 
 .login{
@@ -237,4 +266,29 @@ hr{
 }
 .top{
   margin-top:10px;
+}
+.popUp1 {
+  position: absolute;
+  top: 50px;
+  left: 0;
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 10px;
+}
+
+.response{
+  background: none;
+  border:none;
+  font-size: 14px;
+}
+
+.iconData {
+  display: none;
+  
+
+}
+
+.dataList:hover .iconData {
+  display: block;
+  
 }
