--- a/src/App.css
+++ b/src/App.css
@@ -336,12 +336,22 @@ hr{
 
 .binContainer{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin:15px;
   align-items: center;
+  flex-direction: column;
+  
 }
+
 .firstCntainer{
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+.headtext{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap:1200px;
 }
